[package]
name = "mongodb"
version = "0.1.0"
authors = ["Dany Jimenez <dejimenez86@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
dotenv = "0.15.0"
tokio = {version = "0.2.24", features = ["full"]}
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.118"
serde_derive = "1.0.118"