[package]
name = "tokio-test"
version = "0.1.0"
authors = ["Dany Jimenez <dejimenez86@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }